--- a/Navlight-Booking/package.json
+++ b/Navlight-Booking/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "vue": "^3.5.27"
   },
   "devDependencies": {
