--- a/Navlight-Booking-Server/package.json
+++ b/Navlight-Booking-Server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemailer": "^8.0.1"
   }
 }
