--- a/Navlight-Booking-Server/package.json
+++ b/Navlight-Booking-Server/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.3.1",
     "express": "^4.18.2",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "pdfkit": "^0.17.2"
   }
 }
