feat: refactor booking server to use MySQL for data persistence
- Added mysql2 dependency for MySQL database connection.
- Replaced in-memory JSON file storage with MySQL database for bookings.
- Implemented database connection pooling and error handling.
- Updated booking CRUD operations to interact with MySQL.
- Added Docker support with Dockerfile and docker-compose.yml for backend and database.
- Created PowerShell scripts for loading and dumping bookings data.
- Updated README with setup instructions and architecture overview.
- Added .dockerignore to exclude unnecessary files from Docker context.

--- a/Navlight-Booking-Server/.env.example
+++ b/Navlight-Booking-Server/.env.example
@@ -2,6 +2,13 @@
 PORT=3001
 ADMIN_PASSWORD=change-me
 
+# Database
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=navlight
+DB_PASSWORD=navlight
+DB_NAME=navlight
+
 # SMTP (required for booking confirmations + invoice emails)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
