--- a/Navlight-Booking-Server/package.json
+++ b/Navlight-Booking-Server/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.3.1",
     "express": "^4.18.2",
+    "mysql2": "^3.18.0",
     "nodemailer": "^8.0.1",
     "pdfkit": "^0.17.2"
   }
