--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -54,7 +54,12 @@ jobs:
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' && secrets.DROPLET_SSH_KEY != '' && secrets.DROPLET_IP != '' && secrets.DEPLOY_ENV_FILE != ''
+    if: github.event_name == 'workflow_dispatch' && env.DROPLET_SSH_KEY != '' && env.DROPLET_IP != '' && env.DEPLOY_ENV_FILE != ''
+    env:
+      DROPLET_SSH_KEY: ${{ secrets.DROPLET_SSH_KEY }}
+      DROPLET_IP: ${{ secrets.DROPLET_IP }}
+      DROPLET_USER: ${{ secrets.DROPLET_USER != '' && secrets.DROPLET_USER || 'root' }}
+      DEPLOY_ENV_FILE: ${{ secrets.DEPLOY_ENV_FILE }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -62,7 +67,7 @@ jobs:
       - name: Prepare deployment env file
         run: |
           mkdir -p deploy
-          printf "%s" "${{ secrets.DEPLOY_ENV_FILE }}" > deploy/.env.production
+          printf "%s" "$DEPLOY_ENV_FILE" > deploy/.env.production
           {
             echo "NAVLIGHT_BACKEND_TAG=${GITHUB_SHA}"
             echo "NAVLIGHT_FRONTEND_TAG=${GITHUB_SHA}"
@@ -71,16 +76,16 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.9.1
         with:
-          ssh-private-key: ${{ secrets.DROPLET_SSH_KEY }}
+          ssh-private-key: ${{ env.DROPLET_SSH_KEY }}
 
       - name: Add droplet to known_hosts
         run: |
-          ssh-keyscan -H "${{ secrets.DROPLET_IP }}" >> ~/.ssh/known_hosts
+          ssh-keyscan -H "$DROPLET_IP" >> ~/.ssh/known_hosts
 
       - name: Deploy to droplet
         env:
-          DROPLET_IP: ${{ secrets.DROPLET_IP }}
-          DROPLET_USER: root
+          DROPLET_IP: ${{ env.DROPLET_IP }}
+          DROPLET_USER: ${{ env.DROPLET_USER }}
         run: |
           chmod +x scripts/deploy-droplet.sh
           scripts/deploy-droplet.sh
