fix: update deployment scripts to use consistent environment file paths

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -66,11 +66,12 @@ jobs:
       - name: Prepare deployment env file
         run: |
           mkdir -p deploy
-          printf "%s" "$DEPLOY_ENV_FILE" > deploy/.env.production
+          printf "%s" "$DEPLOY_ENV_FILE" > /opt/navlight/.env.production
           {
+            echo ""
             echo "NAVLIGHT_BACKEND_TAG=${GITHUB_SHA}"
             echo "NAVLIGHT_FRONTEND_TAG=${GITHUB_SHA}"
-          } >> deploy/.env.production
+          } >> /opt/navlight/.env.production
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.9.1
