--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   navlight-backend:
-    image: ghcr.io/rogainizer/navlight-backend:${NAVLIGHT_BACKEND_TAG:-latest}
+    image: ghcr.io/rogainizer/navlight-backend:latest
     restart: unless-stopped
     env_file:
       - ./deploy/.env.production
@@ -18,7 +18,7 @@ services:
       - proxy
 
   navlight-frontend:
-    image: ghcr.io/rogainizer/navlight-frontend:${NAVLIGHT_FRONTEND_TAG:-latest}
+    image: ghcr.io/rogainizer/navlight-frontend:latest
     restart: unless-stopped
     depends_on:
       - navlight-backend
