--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,7 @@
 services:
   navlight-backend:
-    image: ghcr.io/rogainizer/navlight-backend:latest
+    image: ghcr.io/rogainizer/navlight-backend:${NAVLIGHT_BACKEND_TAG:-latest}
+    container_name: navlight-backend
     restart: unless-stopped
     env_file:
       - ./deploy/.env.production
@@ -18,7 +19,8 @@ services:
       - proxy
 
   navlight-frontend:
-    image: ghcr.io/rogainizer/navlight-frontend:latest
+    image: ghcr.io/rogainizer/navlight-frontend:${NAVLIGHT_FRONTEND_TAG:-latest}
+    container_name: navlight-frontend
     restart: unless-stopped
     depends_on:
       - navlight-backend
