--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,6 +2,7 @@ services:
   navlight-backend:
     image: ghcr.io/rogainizer/navlight-backend:${NAVLIGHT_BACKEND_TAG:-latest}
     container_name: navlight-backend
+    hostname: navlight-backend
     restart: unless-stopped
     env_file:
       - ./deploy/.env.production
@@ -13,13 +14,14 @@ services:
       DB_USER: root
       DB_NAME: navlight 
     expose:
-      - "3001"
+      - "3001:3001"
     networks:
       - proxy
 
   navlight-frontend:
     image: ghcr.io/rogainizer/navlight-frontend:${NAVLIGHT_FRONTEND_TAG:-latest}
     container_name: navlight-frontend
+    hostname: navlight-frontend
     restart: unless-stopped
     depends_on:
       - navlight-backend
